# Captcha-On-Edge

./: .gitignore  Cargo.toml  README.md  fastly.toml
.well-known/fastly/: demo-manifest
src/: main.rs
static/: index.html  index.js
