[package]
name = "fastly-captcha-project"
version = "0.1.0"
authors = []
edition = "2018"

[profile.release]
debug = true

[dependencies]
fastly = "^0.5.0"
http = "0.2.3"
captcha = "0.0.8"

lazy_static = "^1.4.0"

hmac-sha256 = "0.1.6"
cookie = "0.14.3"
[dependencies.cookie]
features = ["signed"]
hex = "0.4.2"

